# voxel-game

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE
client/: Cargo.toml
common/: Cargo.toml
common/src/: block.rs  lib.rs  object.rs  registry.rs
common/src/block/: block.rs  block_properties.rs  blocks.rs
common/src/object/: block_object.rs  chunk.rs  physics_object.rs  universe.rs
common/src/registry/: registry.rs  registry_object.rs
resources/shaders/: chunk_selection.comp  colour_resolve.comp  gradient.comp  ray_march.comp  tile_selection.comp  zpyramid_builder.comp
src/client/: VoxelGameClient.cpp  VoxelGameClient.h  main.cpp
src/client/registry/: BlockMaterials.h
src/client/renderer/: AllocatableBuffer.cpp  AllocatableBuffer.h  AllocatedBuffer.cpp  AllocatedBuffer.h  AllocatedImage.cpp  AllocatedImage.h  Camera.cpp  Camera.h  DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorSetLayoutBuilder.cpp  DescriptorSetLayoutBuilder.h  RenderContext.cpp  RenderContext.h  RenderEngine.cpp  RenderEngine.h  VulkanImage.cpp  VulkanImage.h  VulkanInitialisers.cpp  VulkanInitialisers.h  VulkanUtil.h  WindowManager.cpp  WindowManager.h
src/client/renderer/universe/: BlockMaterial.cpp  BlockMaterial.h  SVDAG.cpp  SVDAG.h  UniverseRenderer.cpp  UniverseRenderer.h
src/client/resource/: Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  ShaderResource.cpp  ShaderResource.h
src/common/: VoxelGame.cpp  VoxelGame.h
src/common/block/: Block.h
src/common/registry/: Blocks.h  Registry.h  RegistryID.cpp  RegistryID.h  RegistryObject.cpp  RegistryObject.h
src/common/universe/: PhysicsObject.cpp  PhysicsObject.h  Universe.cpp  Universe.h
src/common/universe/block/: BlockObject.cpp  BlockObject.h  Chunk.cpp  Chunk.h
src/common/util/: Hashers.h  ThreadPool.cpp  ThreadPool.h  ThreadPoolTask.h
